--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <h2 style="text-align: center;padding-top: 30px;">海波作品地址</h2>
-        <div style="margin: 20px 0 0 20px">
+        <!-- <div style="margin: 20px 0 0 20px">
             <a href="http://cloud.kunyue2019.com:30007/" target="_blank">运维平台</a>
         </div>
         <div style="margin: 20px 0 0 20px">
@@ -25,7 +25,7 @@
         </div>
         <div style="margin: 20px 0 0 20px">
             <a href="http://121.36.199.100:30012/#/" target="_blank">车辆管控平台</a>
-        </div>
+        </div> -->
     </div>
 </body>
 <script>
